--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,5 @@
 // Fonts
-// @import url('https://fonts.bunny.net/css?family=Nunito');
-@import url('https://fonts.googleapis.com/css2?family=Young+Serif&display=swap');
+@import url('https://fonts.bunny.net/css?family=Nunito');
 
 // Variables
 @import 'variables';
