--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,13 @@
-// Fonts
-@import url('https://fonts.bunny.net/css?family=Nunito');
+@import "../node_modules/bootstrap/scss/bootstrap";
+
+$theme-colors:(
+    "primary" : #ba3d3d,
+);
 
 // Variables
-@import 'variables';
+@import '_variables';
+
 
 // Bootstrap
 @import 'bootstrap/scss/bootstrap';
+
