--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,6 +8,11 @@
     font-size: larger;
     /* ini contoh buat di home.blade.php */
 }
+
+body{
+    /* background-color: #ffeacd; */
+    background-image: url('/images/alternate.jpg');
+}
 /* .btn-primary {
     --bs-btn-color: #fff;
     --bs-btn-bg: #2a3f60;
@@ -24,3 +29,12 @@
     --bs-btn-disabled-bg: #0d6efd;
     --bs-btn-disabled-border-color: #0d6efd;
     } */
+
+.link-primary{
+    color: #C08552 !important ;
+    text-decoration: none;
+}
+
+.links{
+    font-weight: 250;
+}
