--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,6 +13,7 @@ $input-focus-bg: #ffeacd;;
 // Card
 $card-bg: #F3E9DC;
 $card-box-shadow:  #000;
+$card-title-color:#480101;
 
 //link
 $link-primary : #C08552;
