--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -25,6 +25,9 @@ $btn-font-weight: bold;
 // Variables
 @import '_variables';
 
+//Thumbnail
+$thumbnail-border-width: 0;
+
 
 // Bootstrap
 @import 'bootstrap/scss/bootstrap';
