--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,6 +1,12 @@
 // Body
 $body-bg: #f8fafc;
 
+$theme-colors:(
+    "primary" : #5E3023,
+    "nav"     : #F3E9DC,
+    "info": #ffe6c5 ,
+);
+
 // Typography
 $font-family-sans-serif: 'Nunito', sans-serif;
 $font-size-base: 0.9rem;
