--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -54,3 +54,13 @@ body{
     height: 2.5rem;
     aspect-ratio: 1;
 }
+
+footer{
+    position: relative;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #5E3023;
+    color: white;
+    text-align: center;
+}
